# lume-model

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  .travis.yml  404.html  MANIFEST.in  README.md  dev-environment.yml  dev-requirements.txt  docs-requirements.txt  environment.yml  github_deploy_key_slaclab_lume_model.enc  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/workflows/: build.yml  build_docs.yml  lint.yml  publish.yml  pypi_upload.yml  test_build.yml  test_build_docs.yml  test_gpu.yaml  tests.yml
conda-recipe/: meta.yaml
docs/: index.md  models.md  utils.md  variables.md
examples/: IrisTraining.ipynb  custom_model.ipynb  custom_model_probabilistic.ipynb  ensemble_example.ipynb  gp_model.ipynb  gp_model_rosenbrock.ipynb  iris_model.py  keras_model.ipynb  torch_model.ipynb  torch_model_extended.ipynb  transformer_conversion.ipynb
examples/calibrations/: example_update_input_variables_to_calibration_transformer.ipynb  torch_recalibration_basic_example.ipynb
examples/files/: example_input_image.npy  iris_config.yaml  iris_model.h5
examples/mlflow_integration/: example_update_input_variables_to_calibration_transformer_mlflow.ipynb  gp_model-mlflow.ipynb
examples/probabilistic_models/: custom_model_probabilistic.ipynb  ensemble_example.ipynb  gp_model.ipynb  multitask_gp_example.ipynb
examples/torch_models/: torch_model.ipynb  torch_model_extended.ipynb  transformer_conversion.ipynb
lume_model/: __init__.py  _version.py  base.py  logconfig.py  mlflow_utils.py  models.py  utils.py  variables.py
lume_model/calibrations/torch_model/: README.md  base.py  decoupled_linear.py  utils.py
lume_model/keras/: README.md  __init__.py  layers.py  model.py
lume_model/models/: __init__.py  ensemble.py  gp_model.py  keras_model.py  prob_model_base.py  torch_model.py  torch_module.py  utils.py
lume_model/pytorch/: __init__.py  model.py  prior_mean.py
lume_model/tests/: conftest.py  test_model.py  test_utils.py  test_variables.py
lume_model/tests/keras/: test_layers.py  test_model.py
lume_model/tests/pytorch/: test_model.py
lume_model/tests/test_files/: iris_config.yaml  iris_config.yml
lume_model/torch/: __init__.py  model.py  module.py
lume_model/training/torch_model/: train.py
models/: index.html
search/: search_index.json
tests/: conftest.py  test_base.py  test_models.py  test_utils.py  test_variables.py
tests/calibrations/torch_model/: test_base.py  test_decoupled_linear.py  test_utils.py
tests/keras/: test_layers.py  test_model.py
tests/models/: test_fixed_variable_model.py  test_gp_model.py  test_keras_layers.py  test_keras_model.py  test_models.py  test_torch_model.py  test_torch_module.py
tests/pytorch/: test_model.py  test_prior_mean.py
tests/test_files/: iris_config.yml  iris_model.h5
tests/test_files/california_regression/: X_test_raw.pt  california_variables.yml  input_transformers_0.pt  model.pt  model_info.json  normalization.json  torch_model.yml  (+3 more)
tests/test_keras/: test_model.py
tests/test_torch/: test_model.py  test_module.py
tests/torch/: test_model.py  test_module.py
utils/: index.html
variables/: index.html
(+15 files in other folders)
