[build-system]
requires = ["setuptools>=64.0", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "lume-model"
description = "Data structures used in the LUME modeling toolset."
readme = "README.md"
authors = [
  { name = "SLAC National Accelerator Laboratory"},
]
keywords = ["machine learning", "accelerator physics"]
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.9"
dependencies = [
    "pydantic",
    "numpy",
    "pyyaml"
]
dynamic = ["version"]
[tool.setuptools_scm]
version_file = "lume_model/_version.py"

[project.optional-dependencies]
dev = [
    "botorch<0.11",
    "pre-commit",
    "ruff",
    "pytest"
]
docs = [
    "mkdocs",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-material"
]

[project.urls]
Homepage = "https://github.com/slaclab/lume-model"
Documentation = "https://slaclab.github.io/lume-model/"
"Bug Tracker" = "https://github.com/slaclab/lume-model/issues"

[project.license]
file = "LICENSE"

[options]
zip_safe = false
include_package_data = true

[tool.setuptools.packages.find]
include = [ "lume_model", ]
namespaces = false

[tool.ruff]

[tool.pytest.ini_options]
log_cli_level = "info"
log_level = "debug"
testpaths = ["tests"]